<resources>
    <string name="app_name">Holly\'s Hair Salon</string>
    <string name="add_client">adding client</string>
    <string name="hint_client">Client</string>
    <string name="button_save">Save</string>
    <string name="button_delete">Delete</string>
    <string name="button_product">Inventory</string>
    <string name="empty_not_saved">Client not saved because it is empty.</string>
    <string name="first_name">First Name</string>
    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="no_client">No Client</string>
</resources>